update to files

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Webbeezwork</title>
-    <meta name="description" content="Digital Marketing Agency" />
+    <meta name="description" content="Webbeezwork Digital Marketing Agency" />
     <meta name="author" content="Webbeezwork" />
 
-    <meta property="og:title" content="content-style-builder" />
-    <meta property="og:description" content="Digital Marketing Agency" />
+    <meta property="og:title" content="Webbeezwork Webbeezwork Digital Marketing Agency" />
+    <meta property="og:description" content="Webbeezwork Digital Marketing Agency" />
     
     <link rel="icon" type="image/webp" href="/webbeezwork-fav.webp" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
